# digital-resume

./: .env.example  twin_original.py
.github/workflows/: deploy.yml  destroy.yml
backend/: client_secret.json  context.py  deploy.py  dockerfile  lambda_handler.py  mails.py  pyproject.toml  requirements.txt  resources.py  server.py
backend/data/: facts.json  style.txt  summary.txt
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: twin.tsx
scripts/: deploy.ps1  deploy.sh  deploy_frontend.ps1  destroy.sh
terraform/: main.tf  terraform.tfvars  variables.tf
